# registry-firewall

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docker-release.yml  re-request-review.yml  release.yml
configs/: config.yaml  custom-blocklist.yaml
deployments/docker/: Dockerfile  Dockerfile.full
deployments/docker-compose/: config.yaml  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml
docs/: design.md  requirements.md  tasks.md
docs/sdd/: design-dual-docker.md  requirements-dual-docker.md  tasks-dual-docker.md
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  openapi.rs  types.rs
src/auth/: manager.rs  mod.rs  ratelimit.rs  token.rs
src/config/: mod.rs
src/database/: migrations.rs  mod.rs  sqlite.rs
src/models/: block.rs  mod.rs  package.rs  token.rs
src/otel/: mod.rs
src/plugins/: mod.rs
src/plugins/cache/: filesystem.rs  mod.rs  redis.rs  traits.rs
src/plugins/registry/: cargo.rs  docker.rs  golang.rs  mod.rs  npm.rs  pypi.rs  traits.rs
src/plugins/security/: custom.rs  minage.rs  mod.rs  openssf.rs  osv.rs  traits.rs
src/server/: middleware.rs  mod.rs  router.rs
src/sync/: http_client.rs  mod.rs  retry.rs  scheduler.rs
src/webui/: api.rs  mod.rs
tests/: integration_auth.rs  integration_cache.rs  integration_npm.rs  integration_pypi.rs  integration_registry_filtering.rs  integration_sync.rs
tests/common/: mod.rs
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx
web/src/api/: client.test.ts  client.ts
web/src/pages/: BlockLogs.test.tsx  BlockLogs.tsx  Dashboard.test.tsx  Dashboard.tsx  Settings.test.tsx  Settings.tsx
